# MetaGuard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  MetaGuard_MVP_Simple.md  README.md  SECURITY.md  docker-compose.yml  example.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
data/: transactions.csv
docs/: architecture.rst  changelog.rst  conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: cli.rst  config.rst  detector.rst  exceptions.rst  index.rst  logging.rst  rest_api.rst  risk.rst
docs/development/: contributing.rst  testing.rst
docs/tutorials/: custom_training.rst  deployment.rst  getting_started.rst  index.rst
docs/user_guide/: advanced.rst  basic_usage.rst  configuration.rst  index.rst
examples/: basic_usage.py  batch_processing.py  custom_config.py  error_handling.py  risk_analysis.py
metaguard/: __init__.py  detector.py  risk.py
metaguard/models/: model.pkl
scripts/: benchmark.py  generate_data.py  train.py
src/metaguard/: __init__.py  detector.py  risk.py
src/metaguard/api/: __init__.py  rest.py  schemas.py
src/metaguard/cli/: __init__.py  main.py
src/metaguard/data/: __init__.py
src/metaguard/features/: __init__.py  engineering.py
src/metaguard/models/: __init__.py  base.py  ensemble.py  model.pkl  random_forest.py  xgboost_model.py
src/metaguard/utils/: __init__.py  config.py  exceptions.py  logging.py  validators.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_full_workflow.py
tests/integration/: __init__.py  test_api.py  test_cli.py  test_pipeline.py
tests/unit/: __init__.py  test_config.py  test_detector.py  test_exceptions.py  test_features.py  test_logging.py  test_models.py  test_risk.py  test_validators.py
