[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaguard"
version = "1.1.0"
description = "Fraud detection for metaverse transactions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Moslem Mohseni", email = "moslem.mohseni@example.com"}
]
maintainers = [
    {name = "Moslem Mohseni", email = "moslem.mohseni@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
keywords = [
    "fraud-detection",
    "metaverse",
    "machine-learning",
    "security",
    "transaction-monitoring",
    "risk-assessment",
    "anomaly-detection",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "joblib>=1.3.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "eval-type-backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.4.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.31.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
api = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.25.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
xgboost = [
    "xgboost>=2.0.0",
]
all = [
    "metaguard[dev,docs,api,xgboost]",
]

[project.urls]
Homepage = "https://github.com/moslem-mohseni/MetaGuard"
Documentation = "https://metaguard.readthedocs.io"
Repository = "https://github.com/moslem-mohseni/MetaGuard"
Issues = "https://github.com/moslem-mohseni/MetaGuard/issues"
Changelog = "https://github.com/moslem-mohseni/MetaGuard/blob/main/CHANGELOG.md"

[project.scripts]
metaguard = "metaguard.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
metaguard = ["models/*.pkl", "py.typed"]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from
    "ARG001", # unused function argument
    "TC002",  # Move third-party import into type-checking block
    "TC003",  # Move standard library import into type-checking block
    "RUF012", # Mutable class attributes should be annotated with ClassVar
    "SIM108", # Use ternary operator
    "RUF005", # Consider iterable unpacking
    "SIM105", # Use contextlib.suppress
]

[tool.ruff.lint.isort]
known-first-party = ["metaguard"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "S101", "E402", "F841", "RUF059"]
"scripts/**/*" = ["T201"]
"src/metaguard/cli/main.py" = ["UP045"]  # Optional[X] needed for Python 3.9 + typer compatibility

# Black configuration
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["metaguard"]
skip_gitignore = true

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "pandas.*",
    "joblib.*",
    "xgboost.*",
    "typer.*",
    "rich.*",
    "fastapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "metaguard.utils.logging",
    "metaguard.utils.config",
    "metaguard.features.engineering",
    "metaguard.models.*",
]
disable_error_code = ["override", "arg-type", "no-any-return", "operator", "union-attr"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/metaguard"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
